smooth scrollbar shrink nav fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,9 +66,14 @@
   }
 }
 
-body {
+#scrollbar {
   width: 100%;
   height: 100vh;
+}
+
+body {
+  /* width: 100%;
+  height: 100vh; */
 
   margin: 0;
   font-family: var(--bs-body-font-family);
